<resources>
    <string name="app_name">Detective Search</string>
    <string name="countries">Countries</string>
    <string name="start">START</string>
    <string name="options">OPTIONS</string>
    <string name="cases">Case</string>
    <string name="eval">Evaluation</string>
    <string name="story">Story</string>
    <string-array name="countries_array">
        <item>Argentina</item>
        <item>Australia</item>
        <item>Belarus</item>
        <item>Brazil</item>
        <item>Bulgaria</item>
        <item>Canada</item>
        <item>China</item>
        <item>Estonia</item>
        <item>France</item>
        <item>Italy</item>
        <item>Japan</item>
        <item>Mexico</item>
        <item>Qatar</item>
        <item>Russia</item>
        <item>Turkey</item>
        <item>UK</item>
        <item>Uruguay</item>
        <item>USA</item>
    </string-array>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin at efficitur justo.
        Ut egestas sagittis tristique. Suspendisse pharetra ornare nisi, nec tempus est efficitur non. Maecenas
        pellentesque turpis id felis suscipit blandit. In maximus arcu eu arcu sagittis
        accumsan vitae tempor leo. Curabitur bibendum lacus in odio venenatis volutpat.</string>
    <string name="teleport">Teleport</string>
    <string name="next">Next</string>
    <string name="complete">Complete evaluation</string>
    <string name="back">Back</string>
    <string name="answer">Answer</string>
    <string name="won">Congratulations. You managed to retrieve the Blink.</string>
    <string name="failed">You couldn\'t retrieve the Blink. The world is in great danger. Fortunately we can travel back in time.
    Be careful. Time travel to same timeline might have unwanted effects.</string>
    <string name="normal_mode">Normal Mode</string>
    <string name="flag_mode">Flag Mode</string>
    <string name="reset">Reset Progress</string>
    <string name="save_btn">Save Changes</string>
    <string name="continue_btn">Continue</string>
    <string name="back_in_time_btn">Use Blink</string>
    <string name="empty_answer">Please choose an answer</string>
    <string name="story_1">Year 2099. You are working for a private research company called Void. You are in a
        7 people team and Void is considered one of the most successful research company. 2 weeks ago a successful
        teleportation was achieved by one of your employees, a military company called Militech. Due to the sensitive
        nature of matter this information was withheld from public prevent panic and chaos. Immediate mass production of
        teleportation devices, called \"Blink\", was requested from government. One Blink can only be used to go back to
        a specific place and come back to the place that it was used. Unfortunately yesterday four of the Blink\'s
        were stolen from company vault. There are no suspects since the project is classified as top secret and only a
        handful of people knows the company vault passcode. It is possible that duplication of can be achieved by third parties
        and used for crimes or political interests. You\'re one of the workers who are assigned to seek, investigate, and
        collect these devices. After each mission you are expected to complete an psychological evaluation form created by
        revolutionary Militech AI, Spectre to make sure you are in good form to work.</string>
    <string-array name="eval_1_q1_array">
        <item>Hello I am Spectre. I am responsible of your mental health. I will ask you 3 questions. Please answer each of these
            to the best of your ability.\n
            What do you think of your first mission?</item>
        <item>Good</item>
        <item>Could be better</item>
        <item>Bad</item>
    </string-array>
    <string-array name="eval_1_q2_array">
        <item>Your feedback is important to Militech.\n
            What do you of Militech?</item>
        <item>Good</item>
        <item>Best military company</item>
        <item>Great</item>
    </string-array>
    <string-array name="eval_1_q3_array">
        <item>It is important that you answer the questions truthfully.\n
            How many non-Militech people did you talked about the accident?</item>
        <item>Less than zero</item>
        <item>Zero</item>
        <item>More than zero</item>
    </string-array>
    <string name="story_2">First Blink is collected successfully. After the Blink is secured the criminal caught was interrogated
        but no information on theft or accomplices could be obtained. The possibility of the situation leaking into the media
        is forcing Militech\'s hands. Time is running out. A few days later you are sent to track another lead.</string>
    <string-array name="eval_2_q1_array">
        <item>Hello again! Great job capturing the second Blink. I will ask you 3 questions. Please answer each of these
            to the best of your ability.\n
            What do you think of your second mission?</item>
        <item>Good</item>
        <item>Could be better</item>
        <item>Bad</item>
    </string-array>
    <string-array name="eval_2_q2_array">
        Your feedback is important to Militech.\n
        <item>Do you think Void will be able to retrieve all of the devices?</item>
        <item>Yes</item>
        <item>Not Sure</item>
        <item>No</item>
    </string-array>
    <string-array name="eval_2_q3_array">
        <item>It is important that you answer the questions truthfully.\n
            How many non-Militech people did you talked about the accident?</item>
        <item>Less than zero</item>
        <item>Zero</item>
        <item>More than zero</item>
    </string-array>
    <string name="story_3">One of your team members ,Janice, that you worked with for three years had a horrible accident. Due to a
        malfunction on their Blink only the top half of their body got back from teleportation. After the examination no problem
        was found on the device. Militech decided autopsy and further examination is required to avoid another accident. You and
        your team was given a 2 days off on condition that no new information is found. Information on third Blink was found a
        week later after second one.</string>
    <string-array name="eval_3_q1_array">
        <item>Hello! Sorry to hear about your friend. I hope you\'re ready to work again. I created 3 questions for you. Please answer
            each of these to the best of your ability.\n
            How are you feeling?</item>
        <item>Good</item>
        <item>Could be better</item>
        <item>Bad</item>
    </string-array>
    <string-array name="eval_3_q2_array">
        <item>Your feedback is important to Militech.\n
            Do you think your team will be able to retrieve all of the devices?</item>
        <item>Yes</item>
        <item>Not Sure</item>
        <item>No</item>
    </string-array>
    <string-array name="eval_3_q3_array">
        <item>It is important that you answer the questions truthfully.\n
            Do you think the decrease of the people in team will slow down the process?</item>
        <item>Yes</item>
        <item>We will find a new team member</item>
        <item>I will work more to close the gap</item>
    </string-array>
    <string name="story_4">Third Blink was found in an abandoned warehouse and no suspects could be caught. There was no information
        whether the Blink\'s have been duplicated. Next day, the two suspects that got captured with Blinks were found dead in their cells.
        It is suspected that possessor of the last Blink is the culprit of the murder. A few days after you are sent to find the
        ,hopefully, the last Blink.</string>
    <string-array name="eval_4_q1_array">
        <item>Hello again! I prepared 3 questions for you to answer. Please answer carefully.\n
            Do you remember the name of your missing team member?</item>
        <item>Jeffrey</item>
        <item>Janice</item>
        <item>Julia</item>
    </string-array>
    <string-array name="eval_4_q2_array">
        <item>Your feedback is important to Militech.\n
            Are you afraid of death?</item>
        <item>Yes</item>
        <item>Yes</item>
        <item>No</item>
    </string-array>
    <string-array name="eval_4_q3_array">
        <item>It is important that you answer the questions truthfully.\n
            Do you think all Blink\'s are captured?</item>
        <item>Yes</item>
        <item>Not Sure</item>
        <item>No</item>
    </string-array>
    <string name="story_5">The last Blink was found with on a dead person in a junkyard. There was no indication that death was caused by
        the device. The body had showed signs of struggle and the cause of death seems to be suffocation. After the third blink is secured
        there were no incidents for ten days. The case was almost closed and Militech decided it is safe for military to use Blinks.
        The cause of the accident of your team member is determined to be a user-induced error since no problem could be found on device.
        Before the day of distribution to the military, Void got an anonymous tip about another Blink has been found. Your team is dispatched
        immediately.</string>
    <string-array name="eval_5_q1_array">
        <item>An unexpected error occurred. Traceback (most recent call last) \U+003E ipython-input-3-a9d99df9a3df> in \U+003E module>()</item>
        <item>Y</item>
        <item>E</item>
        <item>S</item>
    </string-array>
    <string-array name="eval_5_q2_array">
        <item>Is this what death feels like?</item>
        <item>\???</item>
        <item>\!!!</item>
        <item>\###</item>
    </string-array>
    <string-array name="eval_5_q3_array">
        <item>R3B00TR3B00TR3B00TR3B00TR3B00TR3B00TR3B00TR3B00TR3B00TR3B00TR3B00T</item>
        <item>movl $0xFF001122, %eax</item>
        <item>retl</item>
        <item>swap A3</item>
    </string-array>
    <string name="story_6">Blink was owned by a armed gang. During the shootout, 7 Militech mercenary got shot and killed also
    your Blink got destroyed. You took the Blink from one of the dead bodies and came back to present. All of team made it alive but
    6 Blinks were lost and captured by armed gang. Your team couldn\'t manage to retrieve any information about duplication of Blinks.
    Spectre was found to have some corruption and it was rebooted from a restore point. The safety of Void\'s psychological evaluations
    are ensured by Militech.</string>
    <string-array name="eval_6_q1_array">
        <item>Hello I am Spectre. I am responsible of your mental health. I will ask you 3 questions. Please answer each of these
            to the best of your ability.\n
            Do you trust Militech?</item>
        <item>Yes</item>
        <item>Yes</item>
        <item>Yes</item>
    </string-array>
    <string-array name="eval_6_q2_array">
        <item>Your feedback is important to Militech.\n
            Do you trust Void?</item>
        <item>Yes</item>
        <item>Not Sure</item>
        <item>No</item>
    </string-array>
    <string-array name="eval_6_q3_array">
        <item>It is important that you answer the questions truthfully.\n
            Do you trust your team members?</item>
        <item>Yes</item>
        <item>Not Sure</item>
        <item>No</item>
    </string-array>
    <string name="story_7">Militech started an investigation of their employees to make sure the fifth Blink wasn\'t 
        After the interrogation</string>
    <string-array name="eval_7_q1_array">
        <item>Hello again, I\'m Spectre! I prepared 3 questions for you to answer. Please answer carefully.\n</item>
        <item>Lorem ipsum</item>
        <item>Lorem ipsum</item>
        <item>Lorem ipsum</item>
    </string-array>
</resources>