<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background_2"
    android:orientation="horizontal">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:orientation="vertical">
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="#73FFFFFF"
            android:id="@+id/rg_options">

            <RadioButton
                android:id="@+id/flagmode_rb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/flag_mode"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/normalmode_rb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/normal_mode"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />
        </RadioGroup>

        <com.llollox.androidtoggleswitch.widgets.ToggleSwitch
            android:id="@+id/photo_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            app:textToggleLeft="Photo"
            app:textToggleRight="No photo" />
        <com.llollox.androidtoggleswitch.widgets.ToggleSwitch
            android:id="@+id/easy_switch"
            android:layout_width="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            app:textToggleLeft="Easy"
            app:textToggleRight="Hard" >
        </com.llollox.androidtoggleswitch.widgets.ToggleSwitch>

        <Button
            android:id="@+id/savechanges_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/save_btn"
            android:textStyle="bold">
        </Button>

        <Button
            android:id="@+id/reset_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="100dp"
            android:text="@string/reset_btn"
            android:textStyle="bold">
        </Button>
    </LinearLayout>

</LinearLayout>