<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/story_back">

    <ImageView
        android:id="@+id/country_image_1"
        android:layout_width="match_parent"
        android:layout_height="250sp"
        android:adjustViewBounds="true"
        android:background="@drawable/turkey_1"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="0sp"
        app:layout_constraintBottom_toTopOf="@id/rgQuestions"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/country_image_1">

        <TextView
            android:id="@+id/tvQuestion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#80FFFFFF"
            android:padding="12sp"
            android:text="@string/story_1"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />
    </ScrollView>


    <RadioGroup
        android:id="@+id/rgQuestions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10sp"
        android:layout_marginVertical="20sp"
        android:background="#80FFFFFF"
        android:padding="5sp"
        app:layout_constraintBottom_toTopOf="@id/btnTeleport"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/scrollView">

        <RadioButton
            android:id="@+id/btnRadio1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/black"
            android:text="@string/answer"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/btnRadio2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/black"
            android:text="@string/answer"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/btnRadio3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/black"
            android:text="@string/answer"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />
    </RadioGroup>

    <Button
        android:id="@+id/btnTeleport"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/teleport"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>